dom/webauthn/U2FTokenManager.h
@@ -49,6 +49,7 @@ class U2FTokenManager final : public nsIU2FTokenManager {
   ~U2FTokenManager() {}
   RefPtr<U2FTokenTransport> GetTokenManagerImpl();
   void AbortTransaction(const uint64_t& aTransactionId, const nsresult& aError);
+  void AbortOngoingTransaction();
   void ClearTransaction();
   // Step two of "Register", kicking off the actual transaction.
   void DoRegister(const WebAuthnMakeCredentialInfo& aInfo,
